# codexopt-demo

./: .gitignore  AGENTS.md  README.md  codexopt.gepa.example.yaml  issues.md  pyproject.toml  tasks.md
.codex/skills/dup-lines/: SKILL.md
.codex/skills/no-frontmatter/: SKILL.md
.codex/skills/verbose-review/: SKILL.md
docs/: gepa-local-and-cloud.md
src/codexopt_demo/: __init__.py  report.py  task_parser.py
tests/: test_task_parser.py
