[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codexopt-demo"
version = "0.1.0"
description = "Demo repository for CodexOpt marketing and benchmarking"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Shashi", email = "shashi@super-agentic.ai" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
